# iree-bare-metal-arm

./: .clang-format  .gitignore  .gitmodules  AUTHORS  CMakeLists.txt  CONTRIBUTING.md  README.md  iree-release-link.txt  iree-release-link.txt.license  requirements-compiler.txt  requirements-tools.txt  requirements.txt
.github/workflows/: build-and-test.yml  build.yml  lint.yaml  reuse.yaml
LICENSES/: LicenseRef-nrf_common.txt
build_tools/: README.md  configure_build.sh  configure_stm32.sh  configure_stm32f4.sh  convert-image-to-c-array.py  generate_build_stats.py  init_iree_submodules.sh  install_iree_host_tools.sh  platform_parsed.patch  stm32-cmsis-base.ld  stm32f303xe-cmsis.ld  stm32f407-cmsis.ld  stm32f407.ld  stm32f407xg-cmsis.ld  stm32f446-cmsis.ld  stm32f446xe-cmsis.ld  stm32f4xx-highmem-cmsis.ld  stm32f4xxxx-cmsis.ld  stm32f746xg-cmsis.ld  stm32l476xg-cmsis.ld  stm32l4r5xi-cmsis.ld  update_iree_submodules.sh
build_tools/cmake/: add_binary.cmake  add_ihex.cmake  arm-none-eabi-gcc.cmake  arm.toolchain.cmake  static_module.cmake  vmvx_module.cmake
build_tools/stm32f4/: stm32f4-discovery-libopencm3-custom.ld  stm32f407-cmsis-custom.ld
docs/: getting_started.md
models/mobilenet_v1/: mobilenet_v1_0.25_224_1_default_1.mlir
models/mobilenet_v1_quant/: mobilenet_v1_0.25_224_quantized_1_default_1.mlir
renode/: stm32f4-base.repl  stm32f4-base.resc  stm32f4-custom.repl  stm32f4-custom.resc
samples/: CMakeLists.txt  create_c_module.c  device_embedded_sync.c  elf_module_test_main.c  simple_embedding.c  simple_embedding_float.c  simple_embedding_int.c  static_library_demo.c  utils_libopencm3.c
samples/mobilenet_v1/: CMakeLists.txt  create_bytecode_module.c  create_c_module.c  static_library_mobilenet_v1.c
samples/mobilenet_v1_quant/: CMakeLists.txt  create_bytecode_module.c  create_c_module.c  device_static_sync.c  mobilenet_v1 copy.c  mobilenet_v1.c  mobilenet_v1_bytecode.c  mobilenet_v1_c_module.c  mobilenet_v1_vmvx.c  static_library_mobilenet_v1_quant.c
samples/simple_embedding/: CMakeLists.txt  device_embedded_sync.c  device_vmvx_sync.c  simple_embedding_float.c  simple_embedding_int.c  simple_embedding_int_test.mlir
samples/simple_vec_mul/: CMakeLists.txt  device_static_sync.c  device_vmvx_sync.c  simple_mul_int.c  simple_mul_int.mlir  simple_mul_int_bytecode.c  simple_mul_int_c_module.c  simple_mul_int_vmvx.c
samples/static_library/: CMakeLists.txt  create_bytecode_module.c  create_c_module.c  static_library_demo.c
samples/utils/: utils_cmsis.c
samples/vision_inference/: CMakeLists.txt  create_bytecode_module.c  create_c_module.c  static_library_mnist.c
tests/: mnist_static_library.robot  mnist_static_library_c.robot  nrf52840.resource  sample_embedded_sync.robot  sample_static_library.robot  sample_static_library_c.robot  sample_vmvx_sync.robot  samples.resource  simple_embedding.robot  simple_vec_mul_int_bytecode_static.robot  simple_vec_mul_int_bytecode_static_c.robot  simple_vec_mul_int_bytecode_static_inline.robot  simple_vec_mul_int_bytecode_static_inline_c.robot  simple_vec_mul_int_bytecode_vmvx.robot  simple_vec_mul_int_bytecode_vmvx_inline.robot  stm32f4xx.resource  stm32l4r5.resource  vmvx_sample.robot
utils/: CMakeLists.txt  README.md  corstone-300.c  nrf52840_cmsis.c  nrf5340_cmsis.c  nrf_write_cmsis.c  stm32_write_cmsis.c  stm32f3_cmsis.c  stm32f407xx_cmsis.h  stm32f411xe_cmsis.h  stm32f446xx_cmsis.h  stm32f4_cmsis.c  stm32f4_crt0.c  stm32f4_libopencm3.c  stm32f7_cmsis.c  stm32l476xx_cmsis.h  stm32l4_cmsis.c  stm32l4r5xx_cmsis.h  write.c  write_usart.c
